--- a/index.css
+++ b/index.css
@@ -71,6 +71,22 @@ body {
     margin-bottom: 20px;
 }
 
+.github-button {
+    display: inline-block;
+    background-color: #134f05;
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+    margin-bottom: 20px;
+    font-size: 13px;
+}
+
+.github-button:hover {
+    background-color: #15e531;
+}
 
 
 .project img {
